logs/dag_id=spotify_etl_pipeline/run_id=manual__2025-09-15T06:08:53.493755+00:00/task_id=gold_transform/attempt=3.log
[2025-09-15T06:23:05.259+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-15T06:08:53.493755+00:00 [queued]>
[2025-09-15T06:23:05.268+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-15T06:08:53.493755+00:00 [queued]>
[2025-09-15T06:23:05.268+0000] {taskinstance.py:1361} INFO - Starting attempt 3 of 6
[2025-09-15T06:23:05.282+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): gold_transform> on 2025-09-15 06:08:53.493755+00:00
[2025-09-15T06:23:05.287+0000] {standard_task_runner.py:57} INFO - Started process 31177 to run task
[2025-09-15T06:23:05.290+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'spotify_etl_pipeline', 'gold_transform', 'manual__2025-09-15T06:08:53.493755+00:00', '--job-id', '775', '--raw', '--subdir', 'DAGS_FOLDER/spotify_dag.py', '--cfg-path', '/tmp/tmph_wmkp5g']
[2025-09-15T06:23:05.294+0000] {standard_task_runner.py:85} INFO - Job 775: Subtask gold_transform
[2025-09-15T06:23:05.345+0000] {task_command.py:415} INFO - Running <TaskInstance: spotify_etl_pipeline.gold_transform manual__2025-09-15T06:08:53.493755+00:00 [running]> on host 0d0cd054d690
[2025-09-15T06:23:06.130+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='spotify_etl_pipeline' AIRFLOW_CTX_TASK_ID='gold_transform' AIRFLOW_CTX_EXECUTION_DATE='2025-09-15T06:08:53.493755+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-15T06:08:53.493755+00:00'
[2025-09-15T06:23:06.139+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/etl/db_utils.py", line 11, in run_sql_scripts
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "TABLE"
LINE 3: CREATE OR REPLACE TABLE gold.fact_listening_history AS
                          ^

[2025-09-15T06:23:06.164+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=spotify_etl_pipeline, task_id=gold_transform, execution_date=20250915T060853, start_date=20250915T062305, end_date=20250915T062306
[2025-09-15T06:23:06.180+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 775 for task gold_transform (syntax error at or near "TABLE"
LINE 3: CREATE OR REPLACE TABLE gold.fact_listening_history AS
                          ^
; 31177)
[2025-09-15T06:23:06.212+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2025-09-15T06:23:06.263+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
